# snow-plots

./: .gitignore  Procfile  basic_pns_statement_scrape.py  package.json  project_structure.txt  pyproject.toml  requirements.txt  settings.py  snow-plots-with-tesseract-ocr-fail.py  snow-plots.py
data/: ABQ_debug.html  ABR_debug.html  AFC_debug.html  AKQ_debug.html  ALY_debug.html  APX_debug.html  ARX_debug.html  BGM_debug.html  BIS_debug.html  BMX_debug.html  BOI_debug.html  BOU_debug.html  BOX_debug.html  BRO_debug.html  BTV_debug.html  BUF_debug.html  BYZ_debug.html  CAE_debug.html  CAR_debug.html  CHS_debug.html  CLE_debug.html  CRP_debug.html  CTP_debug.html  CYS_debug.html  DLH_debug.html  DTX_debug.html  DVN_debug.html  EAX_debug.html  EKA_debug.html  EPZ_debug.html  EWX_debug.html  FFC_debug.html  FGF_debug.html  FGZ_debug.html  FSD_debug.html  FWD_debug.html  GID_debug.html  GJT_debug.html  GLD_debug.html  GRB_debug.html  (+70 more)
modules/: 0_master.py  1_scraper.py  2_parser.py  3_combine_stations.py  4_combine_dates.py  5_snow_map.py  5_snow_map_48.py  6_auto_update_git.py  6_snow_map_48_alt.py  auto_update_git.py  automation_mac.py  combine_pns_metadata.py  create_project_structure.py  flask_main.py  parse_pns_data.py  plot_snow_from_pns.py  pns_scraper.py  pns_statement_scrape.py  project_structure.py  remove_dups.py  settings.py  snow_heat_map.py  snow_map.py  webpage_to_csv.py
public/: snowfall_heatmap_February 02, 2025_February 04, 2025.html  snowfall_heatmap_current.html
reference_data_for_lookup/: event_codes.csv  field_offices.csv  field_offices_html.csv  (+4 more)
(+128 files in other folders)
