[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[build.environment]
PYTHON_VERSION = "3.13"

[build.frontend]
node_version = "18"
publish = "public"

[tool.poetry]
name = "snow-plots"
version = "0.1.0"
description = "Maps of recent snowfall"
authors = ["Matt Alevy <matt0164@outlook.com>"]
# license = "MIT"
# readme = "README.md"

[tool.poetry.dependencies]
python = "3.13"
beautifulsoup4 = "4.12.3"
blinker = "1.9.0"
branca = "0.8.1"
certifi = "2024.12.14"
charset-normalizer = "3.4.1"
click = "8.1.8"
contourpy = "1.3.0"
cycler = "0.12.1"
exceptiongroup = "1.2.2"
Flask = "^3.1"
folium = "0.19.4"
fonttools = "4.55.8"
geopandas = "1.0.1"
idna = "3.10"
importlib_metadata = "8.6.1"
importlib_resources = "6.5.2"
iniconfig = "2.0.0"
itsdangerous = ">=2.2"
Jinja2 = "3.1.5"
kiwisolver = "1.3.2"
MarkupSafe = "2.1.1"
matplotlib = "3.9.4"
numpy = "1.23.5"
packaging = "24.2"
pandas = "2.2.3"
pillow = "11.1.0"
pluggy = "1.5.0"
pyogrio = "0.10.0"
pyparsing = "3.2.1"
pyproj = "3.6.1"
pytest = "8.3.4"
python-dateutil = "2.9.0.post0"
pytz = "2024.2"
requests = "2.28.2"
shapely = "2.0.6"
six = "1.17.0"
soupsieve = "2.6"
tomli = "2.2.1"
tzdata = "2025.1"
urllib3 = "2.3.0"
Werkzeug = ">=3.1"
xyzservices = "2025.1.0"
zipp = "3.21.0"

# [tool.poetry.dev-dependencies]
# pytest = "8.3.4"  # Example of adding a dev dependency
# comment